--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,8 @@
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rgba(0,212,255,1) 100%);">
     <div class="row shadow  pt-2 justify-content-center " style="height: 100vh;">
 
-       
-        <div class="col-md-4 p-5" style="background-color: rgb(82, 71, 71);">
+
+        <div class="col-md-4 p-5 mb-2" style="background-color: rgb(82, 71, 71);">
             <h3 class="text-white">Welcome</h3>
             <p style="font-style: italic; color: rgb(165, 165, 165);">
                 A task and project management system is a crucial tool for organizing and tracking work across teams and
@@ -29,12 +29,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rg
             </p>
 
         </div>
-        <div class="col-md-4 p-5" [style.backgroundColor]="isLogin ? 'whitesmoke' : 'lightgrey'">
+        <div class="col-md-4 p-5 mb-2" [style.backgroundColor]="isLogin ? 'whitesmoke' : 'lightgrey'">
             <div class="card-body p-3">
                 <!-- Login Form -->
                 <div *ngIf="isLogin">
                     <div class="d-flex justify-content-center mb-3">
-                        <img src="tasklogo.png" height="80px" width="80px" alt="">
+                        <img src="tasklogo.png" height="80px" width="80px" alt="logo">
                     </div>
                     <h3 class="card-title text-center mb-4 form-label">Login</h3>
                     <form>
@@ -63,7 +63,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rg
                 <!-- Sign Up Form -->
                 <div *ngIf="!isLogin">
                     <div class="d-flex justify-content-center mb-3">
-                        <img src="tasklogo.png" height="80px" width="80px" alt="">
+                        <img src="tasklogo.png" height="80px" width="80px" alt="logo" class="object-fit-contain">
                     </div>
                     <h3 class="card-title text-center mb-4">Sign Up</h3>
                     <form>
@@ -90,6 +90,6 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rg
                     </p>
                 </div>
             </div>
-    </div>
+        </div>
     </div>
 </div>
