--- a/src/app/task-component/task-component.component.html
+++ b/src/app/task-component/task-component.component.html
@@ -207,7 +207,7 @@
                                             (click)="editTask(task)">
                                             <i class="bi bi-pencil"></i>
                                         </button>
-                                        <button class="btn btn-outline-danger border-0  px-2 py-1" title="Delete"
+                                        <button class="btn btn-outline-danger border-0  px-2 py-1 ms-1" title="Delete"
                                             (click)="deleteTask(task.task_id)">
                                             <i class="bi bi-trash"></i>
                                         </button>
