--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,10 @@ body.dark-mode .dropdown-menu {
   background-color: #1e1e1e !important;
   color: #ffffff;
 }
+.dark-mode .colorContainer {
+  background-color: #1e1e1e !important;
+  color: #ffffff !important;
+}
 
 .dark-mode .card-header {
   background-color: #2c2c2c;
